<resources>
    <string name="app_name">My Budget</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">Budget</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_next">Next</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">This is a new budget</string>
    <string name="add_income_title">Click to add income</string>
    <string name="select_date_range">Select a date range for the buget</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="julien_s_income">Julien\'s Income</string>
    <string name="natacha_s_income">Natacha\'s Income</string>
    <string name="other_income">Other Income</string>
    <string name="amount">$0.00</string>
    <string name="total">Total</string>
    <string name="julien_salary_question">Enter Julien\'s Salary</string>
    <string name="natacha_s_income_value">Natacha\' s Income</string>
    <string name="other_income_value">Other Income</string>
</resources>
