<android.support.design.widget.CoordinatorLayout
    android:id="@+id/newBudget_coordinator_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.julienlaurent.learning.com.mybudget.fragment.NewBudget">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:textStyle="bold"
                android:text="@string/select_date_range"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                style="@style/new_budget_date_style"
                android:hint="@string/start_date"/>

            <TextView
                android:id="@+id/budget_start_date"
                style="@style/new_budget_date"/>

            <View
                style="@style/new_budget_divider"/>

            <TextView
                style="@style/new_budget_date_style"
                android:text="@string/end_date"/>

            <TextView
                android:id="@+id/budget_end_date"
                style="@style/new_budget_date"/>

            <View
                style="@style/new_budget_divider"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_income_title"
                android:gravity="center"
                android:padding="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/julien_income_container"
                        style="@style/income_container">

                        <TextView
                            style="@style/income_textview1"
                            android:text="@string/julien_s_income"/>

                        <TextView
                            android:id="@+id/julien_income_amount"
                            style="@style/income_textview2"
                            android:text="@string/amount"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/natacha_income_container"
                        style="@style/income_container">

                        <TextView
                            style="@style/income_textview1"
                            android:text="@string/natacha_s_income"/>

                        <TextView
                            android:id="@+id/natacha_income_amount"
                            style="@style/income_textview2"
                            android:text="@string/amount"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/other_income_container"
                        style="@style/income_container">

                        <TextView
                            style="@style/income_textview1"
                            android:text="@string/other_income"/>

                        <TextView
                            android:id="@+id/other_income_amount"
                            style="@style/income_textview2"
                            android:text="@string/amount"/>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/income_total_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="6dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <LinearLayout
                    style="@style/income_container"
                    android:layout_marginBottom="8dp">

                    <TextView
                        style="@style/income_textview2"
                        android:text="@string/total"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/total_income_amount"
                        style="@style/income_textview2"
                        android:text="@string/amount"
                        android:textStyle="bold"/>
                </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>


</FrameLayout>
</android.support.design.widget.CoordinatorLayout>
